--- a/TimePicker/Pages/Index.razor
+++ b/TimePicker/Pages/Index.razor
@@ -1,26 +1,14 @@
 ﻿@page "/"
-@using TimePicker.Models;
-<div class="time-picker-body">
-    <div class="flex-container">
-        <div class="time-item"><MudTextField @bind-Value="hour" Label="Hour" Variant="Variant.Outlined"></MudTextField></div>
-        <div class="time-item"><MudTextField @bind-Value="minute" Label="Minute" Variant="Variant.Outlined"></MudTextField></div>
-        <div class="time-item">
-            <MudSelect T="AmPm" Label="AM/PM" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
-                <MudSelectItem Value="@(new AmPm("AM"))" />
-                <MudSelectItem Value="@(new AmPm("PM"))" />
-            </MudSelect>
-        </div>
-    </div>
-</div>
 
-
-<MudTextField T="string" Label="Time" InputType="InputType.Time" />
-
-
+<MudTextField @bind-Value="_currentDateTime" T="DateTime?" Format="s" Label="DateTimeLocal" InputType="InputType.DateTimeLocal"/>
+<MudButton OnClick="ProcessSomething" Variant="Variant.Filled" Color="Color.Primary">Snooze</MudButton>
 @code {
-    TimeSpan? time = new TimeSpan(00, 45, 00);
-    TimeSpan? _time = new DateTime().TimeOfDay;
-    string hour = string.Empty;
-    string minute = string.Empty;
+    private DateTime _dateTime = new DateTime();
+    private DateTime? _currentDateTime = DateTime.Now;
+
+    private void ProcessSomething()
+    {
+        _currentDateTime = DateTime.Now.AddMinutes(10);
+    }
 
 }
