--- a/TimePicker/Pages/Index.razor.css
+++ b/TimePicker/Pages/Index.razor.css
@@ -1,4 +1,4 @@
-﻿.time-picker-body {
+.time-picker-body {
   padding: 2em;
   margin: 2em;
   background-color: lightgray;
@@ -14,4 +14,4 @@
   gap: 1rem;
   text-align: center;
   height: 100%;
-}
+}/*# sourceMappingURL=Index.razor.css.map */
